--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -3,6 +3,7 @@ FROM python:${python_version}-slim-bullseye
 
 RUN apt-get update -y && \
 	apt-get install -y --no-install-recommends \
+	git \
 	libsodium23 && \
     apt-get clean && \
 	rm -rf /var/lib/apt/lists/*
